--- a/index.html
+++ b/index.html
@@ -431,11 +431,11 @@
                 <strong style="color: #e74c3c;">[!] IMPORTANTE:</strong> Se baixou o arquivo, pode não funcionar devido a restrições de segurança do navegador. Para usar corretamente, <strong>hospede no GitHub Pages</strong>!
             </div>
 
-            <div class="upload-zone" onclick="document.getElementById('fileInput').click()">
-                <h3>Carregar Planta Baixa</h3>
-                <p style="color: #666; margin-top: 8px; font-size: 14px;">Toque para selecionar foto</p>
-                <input type="file" id="fileInput" accept="image/*">
-            </div>
+            <label for="fileInput" class="upload-zone" style="display:block; cursor:pointer;">
+   <h3>Carregar Planta Baixa</h3>
+   <p style="color: #666; margin-top: 8px; font-size: 14px;">Toque para selecionar</p>
+</label>
+<input type="file" id="fileInput" accept="image/*" style="display:none;">
 
             <div id="msgArea"></div>
         </div>
@@ -662,11 +662,7 @@
         let beiraisCompletos = false;
 
         // Upload
-        <label for="fileInput" class="upload-zone">
-   <h3>Carregar Planta Baixa</h3>
-   <p style="color: #666; margin-top: 8px; font-size: 14px;">Toque aqui para escolher foto</p>
-</label>
-<input type="file" id="fileInput" accept="image/*" style="display:none;">
+        
 
             showMsg('Carregando imagem...', 'info');
 
@@ -1140,4 +1136,5 @@
     </script>
 </body>
 </html>
+
 
